tests/sksl/errors/golden/Unreachable.glsl
### Compilation failed:

error: 1: unreachable
error: 2: unreachable
error: 3: unreachable
error: 4: unreachable
error: 6: unreachable
5 errors
